--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="header">
         <div class="heading">
           <img src="logo.png" alt="" />
-          <h1>Fandi Fade House</h1>
+          <h1>Fandi Fade-House</h1>
           <img src="logo.png" alt="" />
         </div>
         <div class="heading2">
